=================
Changes for Crate
=================

Unreleased
==========

 - Fix: group by on clustered by column on a partitioned table now produces
   correct results for groups spanning different partitions

 - Fixed an issue that caused errors to be swallowed and caused queries to not
   terminate correctly.

 - Fix: COPY FROM and INSERT from subquery into a partitioned table created
   separate tables with a wrong name instead of correct partitions

2015/03/09 0.47.5
=================

 - Upgrade Elasticsearch to v1.4.4

 - Updated crate-admin to version 0.11.4 which contains following changes:

    - fix: calculate health for each partition of a partitioned table
      based on the number of shards of that partition

 - Fix: number_of_shards and number_of_replicas are now correctly applied
   through the whole lifetime of a partitioned table and its partitions

 - Added columns ``number_of_shards`` and ``number_of_replicas`` to
   table ``information_schema.table_partitions``

2015/02/18 0.47.4
=================

 - Fixed a race condition where some statements would break because of
   using a shared state internally.

 - Made zero length string routing consistent and route by the actual
   hash of an empty string instead of handling it as null. CAUTION: If
   you are using emtpy strings as routing values, affected records
   need to be re-inserted.

2015/02/17 0.47.3
=================

 - Fix: Inserting from a query which contains aggregation functions failed in some
   cases

2015/02/13 0.47.2
=================

 - Fix regression introduced in ``0.47.0``: It is now again possible to refer
   to columns using the fully qualified name including table name or alias in
   the WHERE clause of an Update statement.

 - Added a new option ``overwrite_duplicates`` to COPY FROM. This option can be
   used to make COPY FROM behave the same as it did in versions prior to
   ``0.47.0``

 - Fix: Sorting on a function that returns a boolean value could cause an error.