@@ -5,6 +5,9 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Fix: Sorting on a scalar with a column containing NULL values as
+   argument no longer throws an NPE
+
  - Fix: group by on clustered by column on a partitioned table now produces
    correct results for groups spanning different partitions
 
